# nexus-agent

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/nexus-brain/: Cargo.toml
crates/nexus-brain/src/: architect.rs  architect_tests.rs  diff.rs  diff_tests.rs  graph.rs  graph_tests.rs  hypothesis.rs  hypothesis_tests.rs  lib.rs  memory.rs  memory_tests.rs  risk.rs  risk_tests.rs  scaffold.rs  scaffold_tests.rs  search.rs  search_tests.rs  thought.rs  thought_tests.rs  verify.rs  verify_tests.rs
crates/nexus-cli/: Cargo.toml
crates/nexus-cli/src/: commands.rs  main.rs  repl.rs
crates/nexus-cli/src/tui/: app.rs  command.rs  input.rs  markdown.rs  mod.rs  state.rs  stream.rs  theme.rs
crates/nexus-cli/src/tui/panels/: conversation.rs  files.rs  header.rs  input.rs  mod.rs  sidebar.rs  status.rs
crates/nexus-client/: Cargo.toml
crates/nexus-client/src/: error.rs  lib.rs  message.rs  provider.rs  stream.rs  tests.rs
crates/nexus-cognitive/: Cargo.toml
crates/nexus-cognitive/src/: lib.rs  tools.rs
crates/nexus-config/: Cargo.toml
crates/nexus-config/src/: error.rs  lib.rs  provider.rs  settings.rs
crates/nexus-core/: Cargo.toml
crates/nexus-core/src/: agent.rs  context.rs  error.rs  events.rs  lib.rs  memory.rs  tests.rs
crates/nexus-intel/: Cargo.toml
crates/nexus-intel/src/: learner.rs  lib.rs  memory.rs  patterns.rs  predictor.rs  tests.rs
crates/nexus-tools/: Cargo.toml
crates/nexus-tools/src/: error.rs  factorial.rs  json_parser.rs  lib.rs  lib_tests.rs  registry.rs  schema.rs  tests.rs
crates/nexus-tools/src/tools/: bash.rs  file_ops.rs  mod.rs  search.rs
docker/: Dockerfile
tests/: cli_tests.rs
