[workspace]
resolver = "2"
members = [
    "crates/nexus-config",
    "crates/nexus-client",
    "crates/nexus-tools",
    "crates/nexus-core",
    "crates/nexus-brain",
    "crates/nexus-cognitive",
    "crates/nexus-intel",
    "crates/nexus-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/vitkuz573/nexus-agent"
homepage = "https://github.com/vitkuz573/nexus-agent"
documentation = "https://github.com/vitkuz573/nexus-agent#readme"
authors = ["Vitaly Kuzyaev <vitkuz573@gmail.com>"]
description = "Open-source, full-terminal AI coding agent built in Rust"
keywords = ["ai", "agent", "coding", "cli", "tui", "llm"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
dirs = "6"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Console
console = "0.15"
indicatif = "0.17"

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Testing
mockall = "0.13"
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
