[package]
name = "nexus-cli"
description = "Full-terminal TUI for Nexus Agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "nexus"
path = "src/main.rs"

[dependencies]
nexus-config = { path = "../nexus-config" }
nexus-client = { path = "../nexus-client" }
nexus-tools = { path = "../nexus-tools" }
nexus-core = { path = "../nexus-core" }
nexus-cognitive = { path = "../nexus-cognitive" }
nexus-brain = { path = "../nexus-brain" }
nexus-intel = { path = "../nexus-intel" }
tokio = { workspace = true }
clap = { workspace = true }
console = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
futures = { workspace = true }
parking_lot = "0.12"
