[package]
name = "nexus-client"
description = "OpenAI-compatible LLM client"
version.workspace = true
edition.workspace = true

[dependencies]
nexus-config = { path = "../nexus-config" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
