[package]
name = "nexus-core"
description = "Core agent engine"
version.workspace = true
edition.workspace = true

[dependencies]
nexus-config = { path = "../nexus-config" }
nexus-client = { path = "../nexus-client" }
nexus-tools = { path = "../nexus-tools" }
nexus-brain = { path = "../nexus-brain" }
nexus-intel = { path = "../nexus-intel" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
