[package]
name = "nexus-tools"
description = "Tool system for Nexus Agent"
version.workspace = true
edition.workspace = true

[dependencies]
nexus-config = { path = "../nexus-config" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
